--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: lolit-go <lolit-go@student.42malaga.com    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/04/10 14:46:03 by lolit-go          #+#    #+#              #
-#    Updated: 2024/04/12 12:50:48 by lolit-go         ###   ########.fr        #
+#    Updated: 2024/04/12 16:27:48 by lolit-go         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -29,7 +29,10 @@ SRCS =  ft_isalpha.c \
 		ft_strrchr.c \
 		ft_bzero.c \
 		ft_memset.c \
-		ft_memchr.c
+		ft_memchr.c \
+		ft_memcpy.c \
+		ft_memmove.c \
+		ft_memcmp.c
 
 OBJS = ${SRCS:.c=.o}
 
