--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: lolit-go <lolit-go@student.42malaga.com    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/04/10 14:46:03 by lolit-go          #+#    #+#              #
-#    Updated: 2024/04/15 11:57:45 by lolit-go         ###   ########.fr        #
+#    Updated: 2024/05/06 17:56:26 by lolit-go         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -33,7 +33,8 @@ SRCS =  ft_isalpha.c \
 		ft_memcpy.c \
 		ft_memmove.c \
 		ft_memcmp.c \
-		ft_atoi.c
+		ft_atoi.c \
+		ft_calloc.c
 
 OBJS = ${SRCS:.c=.o}
 
