--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: lolit-go <lolit-go@student.42malaga.com    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/04/10 14:46:03 by lolit-go          #+#    #+#              #
-#    Updated: 2024/05/14 17:36:35 by lolit-go         ###   ########.fr        #
+#    Updated: 2024/05/21 01:11:15 by lolit-go         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -40,7 +40,8 @@ SRCS =  ft_isalpha.c \
 		ft_strjoin.c \
 		ft_strtrim.c \
 		ft_strnstr.c \
-		ft_split.c
+		ft_split.c \
+		ft_itoa.c
 
 OBJS = ${SRCS:.c=.o}
 
