--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: lolit-go <lolit-go@student.42malaga.com    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/04/10 14:46:03 by lolit-go          #+#    #+#              #
-#    Updated: 2024/08/22 15:22:16 by lolit-go         ###   ########.fr        #
+#    Updated: 2024/08/22 17:19:14 by lolit-go         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -55,7 +55,8 @@ BONUS_SRCS = 	ft_lstnew_bonus.c \
 				ft_lstadd_front_bonus.c \
 				ft_lstadd_back_bonus.c \
 				ft_lstsize_bonus.c \
-				ft_lstlast_bonus.c
+				ft_lstlast_bonus.c \
+				ft_lstdelone_bonus.c
 
 BONUS_OBJS = ${BONUS_SRCS:.c=.o}
 
