--- a/printf/Makefile
+++ b/printf/Makefile
@@ -6,7 +6,7 @@
 #    By: lolit-go <lolit-go@student.42malaga.com    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/09/07 15:54:49 by lolit-go          #+#    #+#              #
-#    Updated: 2024/09/10 16:26:14 by lolit-go         ###   ########.fr        #
+#    Updated: 2024/09/11 23:34:29 by lolit-go         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -23,7 +23,8 @@ FUNC_SRCS = ft_putchar.c \
 			ft_itoa.c \
 			ft_strlen.c \
 			ft_strlcpy.c \
-			ft_strdup.c
+			ft_strdup.c \
+			ft_mem_addr.c
 
 FUNC_OBJS = ${FUNC_SRCS:.c=.o}
 
