--- a/get_next_line/Makefile
+++ b/get_next_line/Makefile
@@ -6,7 +6,7 @@
 #    By: lolit-go <lolit-go@student.42malaga.com    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/09/22 15:13:01 by lolit-go          #+#    #+#              #
-#    Updated: 2024/09/22 15:20:17 by lolit-go         ###   ########.fr        #
+#    Updated: 2024/09/25 19:21:43 by lolit-go         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -14,7 +14,8 @@ NAME = get_next_line.a
 CC = /usr/bin/gcc
 CFLAGS = -Wall -Werror -Wextra
 
-SRCS = get_next_line.c
+SRCS = 	get_next_line.c \
+		get_next_line_utils.c
 
 OBJS = ${SRCS:.c=.o}
 
